# rustircd

./: .gitignore  ACCOUNT_NOTIFICATION_INTEGRATION.md  CHANNEL_BURST_SYSTEM.md  CONFIGURABLE_REPLIES.md  Cargo.toml  DEVELOPMENT.md  ENHANCED_FEATURES.md  IRCV3_CORE_INTEGRATION.md  IRCV3_INTEGRATION_COMPLETE.md  LUSERS_SYSTEM.md  MOTD_SYSTEM.md  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_INTEGRATION.md  PROJECT_STATUS.md  README.md  REHASH_SYSTEM.md  SECURITY.md  STATS_SYSTEM.md  THROTTLING_MODULE.md  TODO_IMPLEMENTATION_COMPLETE.md  USER_MODE_SECURITY.md  config_enhanced.toml  motd.txt  replies.toml  setup.sh
.cursor/: settings.json
core/: Cargo.toml
core/benches/: benchmarks.rs
core/src/: audit.rs  auth.rs  batch_optimizer.rs  broadcast.rs  buffer.rs  burst_extensions.rs  cache.rs  class_tracker.rs  client.rs  config.rs  connection.rs  database.rs  error.rs  extensible_modes.rs  extension_registry.rs  extensions.rs  lib.rs  lookup.rs  message.rs  module.rs  module_numerics.rs  motd.rs  network.rs  numeric.rs  rehash.rs  replies_config.rs  server.rs  server_connection.rs  statistics.rs  tests.rs  throttling_manager.rs  user.rs  user_modes.rs  utils.rs  validation.rs
core/src/extensions/: README.md  account_tracking.rs  batch.rs  identify_msg.rs  ip_cloak.rs  ip_cloak_v2.rs  mod.rs  server_time.rs
core/tests/: cache_burst_tests.rs  cache_integration_tests.rs  command_tests.rs  integration_tests.rs  netsplit_tests.rs
docs/: ACCOUNT_INTEGRATION.md  ADDING_AUTH_MODULES.md  ADMIN_AUTH_CONFIGURATION.md  ATHEME_SASL_INTEGRATION.md  AUDIT_LOGGING.md  AUTHENTICATION_SYSTEM.md  AUTH_QUICK_REFERENCE.md  BENCHMARKING.md  CACHE_BURST_COMPATIBILITY.md  CACHE_CONFIGURATION.md  CACHE_INTEGRATION.md  IRCV3_MODULE_INTEGRATION.md  NETSPLIT_RECOVERY.md  OPERATOR_FLAGS.md  OPERATOR_FLAGS_SUMMARY.md  OPERATOR_SECURITY.md  PERFORMANCE.md  SECURITY_AUDIT.md  SECURITY_SUMMARY.md  UNWRAP_REMEDIATION.md
examples/: atheme_sasl_integration_example.rs  auth_integration_example.rs  basic_usage.rs  bot_mode_flow.rs  cache_example.rs  channel_burst_example.rs  channel_burst_integration.rs  configurable_messaging_example.rs  custom_replies.toml  enhanced_features.rs  extensible_modes_example.rs  extensions_structure_example.rs  globops_example.rs  help_system_example.rs  ircv3_core_integration.rs  ircv3_extended_join_multi_prefix.rs  ircv3_integration_example.rs  ircv3_sasl_integration_example.rs  lusers_example.rs  messaging_integration_example.rs  messaging_modules_example.rs  modular_messaging_example.rs  modular_usage.rs  motd_example.rs  motd_path_test.rs  multi-port-config.toml  operator_security_test.rs  rehash_example.rs  separate_ban_modules.rs  server_with_configurable_messaging.rs  services_integration_example.rs  solanum_extensions_example.rs  (+11 more)
modules/: Cargo.toml
modules/src/: admin.rs  ban_management.rs  channel.rs  dline.rs  gline.rs  help.rs  ircv3.rs  kline.rs  knock.rs  lib.rs  monitor.rs  oper.rs  opme.rs  optional.rs  sasl.rs  services.rs  set.rs  testing.rs  throttling.rs  xline.rs
modules/src/auth/: database.rs  file.rs  http.rs  ldap.rs  mod.rs  supabase.rs
modules/src/ircv3/: account_tracking.rs  away_notification.rs  batch.rs  bot_mode.rs  capability_negotiation.rs  channel_rename.rs  core_integration.rs  extended_join.rs  message_tags.rs  mod.rs  multi_prefix.rs  sasl_capability.rs  user_properties.rs
modules/src/messaging/: globops.rs  mod.rs  wallops.rs  wrapper.rs
services/: ATHEME_ACCOUNT_NOTIFICATIONS.md  ATHEME_PROTOCOL.md  Cargo.toml
services/src/: atheme.rs  auth_provider.rs  example.rs  framework.rs  lib.rs
src/: main.rs
tools/mkpasswd/: Cargo.toml  README.md
tools/mkpasswd/src/: main.rs
(+28 files in other folders)
