[workspace]
members = ["core", "modules", "services"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Emilio Escobar <emilio@example.com>"]
license = "MIT"
repository = "https://github.com/emilio/rustircd"
description = "A modular IRC daemon implementation in Rust"

[package]
name = "rustircd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "rustircd"
path = "src/main.rs"

[dependencies]
rustircd-core = { path = "core" }
rustircd-modules = { path = "modules" }
rustircd-services = { path = "services" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"