[package]
name = "rustircd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core IRC daemon functionality"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rustc-hash = "1.1"
sha2 = "0.10"
trust-dns-resolver = "0.23"
tokio-util = "0.7"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
tempfile = "3.8"

[[bench]]
name = "benchmarks"
harness = false
