[package]
name = "rustircd-modules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IRC daemon modules and extensions"

[dependencies]
rustircd-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rustc-hash = "1.1"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
serde_json = "1.0"
